<resources>
    <!--  General  -->
    <string name="app_name">FitIt</string>
    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>

    <string name="user_profile_title">User Profile</string>
    <string name="schedule_title">Schedule</string>
    <string name="login_title">Login</string>
    <string name="new_event_title">Create a New Event</string>
    <string name="group_title">Group</string>
    <string name="settings_title">Settings</string>
    <string name="logout_title">Log Out</string>
    <string name="feedback_title">Feedback</string>

    <!--  User Profile Activity  -->
    <string name="profile_picture_desc">User Profile Picture</string>
    <string name="profile_username_text">Username: </string>
    <string name="profile_full_name_text">Full name: </string>
    <string name="profile_username_placeholder">Username</string>
    <string name="profile_full_name_placeholder">Full name</string>
    <string name="profile_point">Points: </string>
    <string name="profile_intial_point">0 XP</string>
    <string name="points_unit">XP</string>

    <!--  Login Activity  -->
    <string name="login_title_text">Welcome to FitIt!</string>
    <string name="login_username_hint">Username</string>
    <string name="login_pass_hint">Password</string>
    <string name="login_full_name_hint">Full Name</string>
    <string name="login_button_text">Log in</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="login_switch_text">Don\'t have an account? Sign up today!</string>
    <string name="sign_up_switch_text">Already have an account? Log in.</string>

    <!--  Schedule Fragment  -->
    <string name="schedule_future_button">Future Sessions</string>
    <string name="schedule_past_button">Past Sessions</string>

    <!--  New Event Activity  -->
    <string name="new_event_name">Event Name</string>
    <string name="new_event_description">Event Description</string>
    <string name="new_event_location">Event Location</string>
    <string name="new_event_start_time">Start time:</string>
    <string name="new_event_duration">Duration:</string>
    <string name="new_event_duration_unit">minutes</string>
    <string name="new_event_create">Create Event</string>
    <string name="new_event_frequency">Frequency</string>
    <string name="no_group_header">You\'re not in a group!\n\nSearch for a group…\nor create a new one!</string>
    <string name="search_group_hint">Write in a group name!</string>
    <string name="join_group_button">Join!</string>
    <string name="create_group_button">Create!</string>


    <!--  Misc  -->

    <string-array name="frequency_choices">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Every Weekday</item>
    </string-array>

    <string name="submit_button">Submit feedback</string>
    <string name="feedback_q1">How motivated are you to pursue your fitness goal?</string>
    <string name="feedback_q2">How much of your goal today did you actually complete?</string>
    <string name="feedback_q3">How are you feeling today?</string>
    <string name="feedback_q4">Did you work towards your fitness goal today?</string>
    <string name="m1_text">None</string>
    <string name="m1">1</string>
    <string name="m2">2</string>
    <string name="m3">3</string>
    <string name="m4">4</string>
    <string name="m5">5</string>
    <string name="m5_text">Very</string>
    <string name="group_activity_title">Fit Group</string>

</resources>
