<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".ui.FeedbackActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->


    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/feedback_background"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:id="@+id/q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="4dp"
                android:text="@string/feedback_q1"
                android:textColor="@color/black" />

        <RadioGroup
                android:id="@+id/motivationButtonsGroup"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/m1_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/m1_text"
                    android:textColor="@color/black" />

            <RadioButton
                    android:id="@+id/m1_button"
                    style="@style/RadioButtonWithTextOnTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/m1" />

            <RadioButton
                    android:id="@+id/m2_button"
                    style="@style/RadioButtonWithTextOnTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/m2" />

            <RadioButton
                    android:id="@+id/m3_button"
                    style="@style/RadioButtonWithTextOnTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/m3" />

            <RadioButton
                    android:id="@+id/m4_button"
                    style="@style/RadioButtonWithTextOnTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/m4" />

            <RadioButton
                    android:id="@+id/m5_button"
                    style="@style/RadioButtonWithTextOnTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/m5" />

            <TextView
                    android:id="@+id/m5_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/m5_text"
                    android:textColor="@color/black" />

        </RadioGroup>

        <TextView
                android:id="@+id/q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:text="@string/feedback_q2"
                android:textColor="@color/black" />

        <TextView
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        <SeekBar
                android:id="@+id/successSeekbar"
                style="@android:style/Widget.Material.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="0"
                android:thumbTint="@color/colorAccent" />

        <TextView
                android:id="@+id/q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:text="@string/feedback_q3"
                android:textColor="@color/black" />

        <RadioGroup
                android:id="@+id/feelingGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

            <RadioButton
                    android:id="@+id/notWellButton"
                    style="?android:borderlessButtonStyle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/ic_sad"
                    android:button="@null"
                    android:paddingHorizontal="10dp" />

            <RadioButton
                    android:id="@+id/neutralButton"
                    style="?android:borderlessButtonStyle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_neutral"
                    android:button="@null"
                    android:paddingHorizontal="10dp" />

            <RadioButton
                    android:id="@+id/wellButton"
                    style="?android:borderlessButtonStyle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_happy"
                    android:button="@null" />

        </RadioGroup>

        <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:paddingVertical="10dp"
                android:text="@string/submit_button" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>